# multi-tenant-transaction-and-ledger-system

./: .env.example  API.md  Cargo.toml  Design.md  Dockerfile  README.md  docker-compose.yml  dockerignore
migrations/: 20251221031727_01_init_schema.sql
src/: main.rs
src/controllers/: accounts_controllers.rs  admin_controllers.rs  business_controllers.rs  mod.rs  transaction_controllers.rs  webhooks_controllers.rs
src/middlewares/: authentication_middleware.rs  mod.rs  rate_limit_middleware.rs
src/models/: accounts_models.rs  bussiness_models.rs  common.rs  event_queue.rs  mod.rs  transaction_models.rs  webhooks_models.rs
src/routes/: accounts_routes.rs  admin_routes.rs  mod.rs  transaction_routes.rs  webhooks_routes.rs
src/services/: db_operations.rs  mod.rs  other_services.rs  webhook_events_executor.rs
