[package]
name = "multi-tenant-transaction-and-ledger-system"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.22"
dotenv = "0.15.0"
axum = { version = "0.8.6", features = ["ws", "tokio"] }
tokio = {version = "1.48.0", features = ["full"]}
tracing = "0.1.43"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono","runtime-tokio-native-tls"] }