[package]
name = "multi-tenant-transaction-and-ledger-system"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.22"
dotenv = "0.15.0"
axum = { version = "0.8.6", features = ["ws", "tokio"] }
tokio = {version = "1.48.0", features = ["full"]}
tracing = "0.1.43"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono","runtime-tokio-native-tls", "rust_decimal"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rand = "0.8"
hex = "0.4.3"
sha2 = "0.10.9"
hmac = "0.12.1"
chrono = { version = "0.4.42", features = ["serde"] }
rust_decimal = { version = "1.39.0", features = ["serde"] }
redis = { version = "0.32.7", features = ["aio", "tokio-comp"] }
reqwest = { version = "0.12.26", features = ["json"] }
futures-util = "0.3.31"